correction alignement des inserts text page portfolio show

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -785,7 +785,7 @@ hr {
 
 .block-portfolio-insert-show {
     padding: 0 20px 10px;
-    text-align: center;
+    text-align: left;
     margin: 2%;
     border: 1px solid $background-color-border-bis;
     border-radius: 20px;
